--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 body {
   height: 100vh;
-
   background: #ffffff;
   background-image: url("./netflix-background-image\ 1.png");
   background-position: center;
@@ -15,9 +14,27 @@ body {
   text-align: center;
 }
 .container {
-  display: inline-block;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   margin: 20px;
+  border-radius: 5px;
+}
+form {
+  display: inline-block;
+  border: 2px solid red;
+  width: fit-content;
+  text-align: left;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  padding: 15px 23px;
+  color: #c4c4c4;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+}
+input {
+  display: inline-block;
+  width: 200px;
+  padding: 5px;
+  margin-bottom: 20px;
 }
 h1 {
   font-family: "Bowlby One SC", cursive;
